RMI #3 Structure changes fixing